# codetether-agent

./: .claude-bugfix.md  .claude-prompt.md  .claude-tui-batch1.md  .claude-tui-batch2.md  .claude-world1.md  .claude-world2.md  .claude-world3.md  .claude-world4.md  .claude-world5.md  .claude-world6.md  .claude-world7.md  .codetether-todos.json  .dockerignore  .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  DOCUMENTATION_UPDATE_SUMMARY.md  Dockerfile  Dockerfile.worker-prebuilt  IMAGE_INPUT_REQUIREMENTS.md  IMPLEMENTATION_ANALYSIS.md  IMPLEMENTATION_SUMMARY.md  Jenkinsfile  Makefile  README.md  RELEASE_NOTES.md  RELEASE_NOTES_v4.6.3.md  TECHNOLOGY_ASSESSMENT.md  TELEMETRY.md  action.yml  benchmark_results.json  build.rs  cargo_check_errors.txt  check_file_limits.sh  codex_tui_resume_issue.md  commit.sh  content_inventory_document.md  cookies.txt  enhancements.md  (+74 more)
crates/codetether-a2a-worker-core/: Cargo.toml
crates/codetether-a2a-worker-core/src/: agent_routing.rs  capabilities.rs  cognition.rs  cognition_env.rs  heartbeat.rs  heartbeat_ops.rs  identity.rs  lib.rs  runtime_env.rs
crates/codetether-a2a-worker-core/src/codetether_agent/: classifier.rs  mod.rs  record.rs  scanner.rs  state.rs  subagent_orphans.rs
crates/codetether-browser/: Cargo.toml
crates/codetether-browser/src/: lib.rs
crates/codetether-browser/src/browser/: command.rs  error.rs  mod.rs  service.rs
crates/codetether-browser/src/browser/offline/: auth_trace_run.rs  auth_trace_serde.rs  cookie_diff.rs  cookie_diff_index.rs  cookie_parse.rs  explain_cors.rs  explain_cors_analyse.rs  replay.rs  tests.rs  tests_net.rs
crates/codetether-browser/src/browser/output/: content.rs  tabs.rs  toggle.rs
crates/codetether-browser/src/browser/request/: dom.rs  eval.rs  mod.rs  motion.rs  navigation.rs  net.rs
crates/codetether-browser/src/browser/session/: access.rs  dom.rs  dom_extra.rs  eval.rs  health.rs  mod.rs  runtime.rs  runtime_state.rs  screen.rs  state.rs  upload.rs  wait.rs
crates/codetether-browser/src/browser/session/lifecycle/: attach.rs  browser.rs  discover.rs  handler.rs  launch.rs  mod.rs
crates/codetether-browser/src/browser/session/native/: dispatch.rs  fetch.rs  lifecycle.rs  mod.rs  navigation.rs  screen.rs  wait.rs
crates/codetether-browser/src/browser/session/native/content/: html.rs  mod.rs  snapshot.rs  text.rs  title.rs
crates/codetether-browser/src/browser/session/native/device/: keyboard.rs  mod.rs  mouse.rs  page.rs
crates/codetether-browser/src/browser/session/native/dom/: forms.rs  input.rs  mod.rs  page.rs  selector.rs  upload.rs
crates/codetether-browser/src/browser/session/native/eval/: mod.rs  value.rs
crates/codetether-browser/src/browser/session/native/net/: mod.rs  replay_call.rs
crates/codetether-browser/src/browser/session/native/state/: mod.rs  page.rs  runtime.rs
crates/codetether-browser/src/browser/session/net/: diagnose.rs  diagnose_tmpl.rs  fetch.rs  log.rs  replay.rs
crates/codetether-rlm/: Cargo.toml
crates/codetether-rlm/src/: capability.rs  chunker.rs  config.rs  context_trace.rs  lib.rs  result.rs  stats.rs  traits.rs  types.rs
crates/codetether-rlm/src/chunker/: boundaries.rs  chunk.rs  compress.rs  detect.rs  detect_helpers.rs  estimate.rs  hints.rs  mod.rs  reassemble.rs  select.rs  split.rs  tests.rs  types.rs
crates/codetether-rlm/src/context_index/: cache.rs  extract.rs  fallback.rs  mod.rs  plan.rs  record.rs  retrieval.rs  score.rs  symbol.rs  tests.rs  text.rs  text_records.rs  types.rs
crates/codetether-rlm/src/context_trace/: event.rs  event_meta.rs  summary.rs  summary_format.rs  tests.rs  token_estimate.rs  token_factories.rs  trace.rs  trace_budget.rs  trace_events.rs  trace_summary.rs
crates/codetether-rlm/src/context_trace/tests/: event_filter.rs  eviction.rs  summary_stats.rs  token_count.rs
crates/codetether-rlm/src/engine/: ast.rs  bus.rs  classify.rs  complete.rs  deterministic.rs  evidence.rs  file.rs  mod.rs  pack.rs  pattern.rs  query.rs  response.rs  run.rs  semantic.rs  trace.rs
crates/codetether-rlm/src/events/: bus.rs  completion.rs  fallback.rs  mod.rs  outcome.rs  progress.rs  s3_config.rs
crates/codetether-rlm/src/model_select/: configured.rs  defaults.rs  mod.rs  resolve.rs  tests.rs  types.rs
crates/codetether-rlm/src/oracle/: README.md  ast_validation.rs  batch_write.rs  consensus.rs  grep_oracle.rs  grep_validation.rs  mod.rs  schema.rs  storage.rs  tree_sitter_oracle.rs  types.rs  validator.rs
crates/codetether-rlm/src/oracle/answer_format/: mod.rs
crates/codetether-rlm/src/oracle/answer_format/parse/: mod.rs  tests.rs
crates/codetether-rlm/src/oracle/consensus_helpers/: mod.rs  placeholders.rs
crates/codetether-rlm/src/oracle/record/: convert.rs
crates/codetether-rlm/src/oracle/storage/: helpers.rs  mod.rs  sync.rs  sync_stats.rs  types.rs  usage.rs
crates/codetether-rlm/src/oracle/storage/manager/: internals.rs  mod.rs  persist.rs
crates/codetether-rlm/src/oracle/storage/remote/: minio_backend.rs  minio_upload.rs  mod.rs
crates/codetether-rlm/src/oracle/storage/tests/: fixtures.rs  sync_tests.rs
crates/codetether-rlm/src/oracle/tree_sitter_oracle/: answer_names.rs  classify.rs  compare.rs  definitions.rs  enums.rs  errors.rs  extract.rs  functions.rs  impls.rs  oracle.rs  query.rs  query_match.rs  structs.rs  tests.rs  types.rs  verification.rs  verify.rs  verify_targets.rs
crates/codetether-rlm/src/oracle/tree_sitter_oracle/tests/: enums.rs  errors.rs  functions.rs  sample.rs  structs.rs
crates/codetether-rlm/src/oracle/validator/: mod.rs
crates/codetether-rlm/src/router/: auto_prepare.rs  auto_process.rs  auto_process_bus.rs  auto_process_emit.rs  extract.rs  fallback.rs  fallback_context.rs  host.rs  legacy_answer.rs  legacy_process.rs  mod.rs  prompts.rs  prompts_system.rs  should_route.rs  tests.rs  truncate.rs  types.rs
crates/codetether-rlm/src/router/auto_loop/: mod.rs  support.rs  text_path.rs  tool_dispatch.rs
python/: .gitignore  pyproject.toml
python/codetether_control_plane/: __init__.py  sanitizer.py
python/tests/: test_sanitizer.py
(+8735 files in other folders)
