[workspace]

[package]
name = "codetether-agent"
version = "0.1.4"
edition = "2024"
authors = ["Riley Seaburg <riley@rileyseaburg.com>"]
description = "A2A-native AI coding agent for the CodeTether ecosystem"
license = "MIT"
repository = "https://github.com/rileyseaburg/codetether-agent"

[lib]
name = "codetether_agent"
path = "src/lib.rs"

[[bin]]
name = "codetether"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# CLI
clap = { version = "4", features = ["derive", "env"] }

# HTTP server/client
axum = { version = "0.8", features = ["ws", "macros"] }
reqwest = { version = "0.13.1", features = ["json", "stream", "rustls"], default-features = false }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "auth"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# AI providers
async-openai = { version = "0.32.4", features = ["chat-completion"] }

# A2A/MCP protocols
jsonrpc-core = "18"

# TUI
ratatui = "0.30.0"
crossterm = "0.29.0"

# Config
config = "0.15"
directories = "6"
toml = "0.9.8"

# Secrets (HashiCorp Vault)
vaultrs = "0.7"

# Utilities
anyhow = "1"
thiserror = "2"
tracing = "0.1"
urlencoding = "2"
rand = "0.9.2"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
async-trait = "0.1"
lazy_static = "1.4"
once_cell = "1.19"
parking_lot = "0.12"
dashmap = "6"
glob = "0.3"
html-escape = "0.2"
ignore = "0.4"
walkdir = "2"
regex = "1"
similar = "2"
lsp-types = "0.97.0"
syntect = { version = "5", default-features = false, features = ["default-syntaxes", "default-themes", "regex-onig"] }

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3"
insta = "1"

[profile.release]
lto = true
codegen-units = 1
strip = true
