[workspace]

[package]
name = "codetether-agent"
version = "0.1.6"
edition = "2024"
authors = ["Riley Seaburg <riley@rileyseaburg.com>"]
description = "A2A-native AI coding agent for the CodeTether ecosystem"
license = "MIT"
repository = "https://github.com/rileyseaburg/codetether-agent"
exclude = [
    "dist/",
    "target/",
    "vendor/",
    "docs/tui-screenshot.png",
    "prd*.json",
    "ui-prd.json",
    "worktree-prd.json",
    "feature_*.json",
    "benchmark_results.json",
    "subtask*.json",
    "subtask*.md",
    "*.txt",
    "*.py",
    "post.md",
    "gap-inventory.md",
    "content_inventory_document.md",
    "static_analysis_report.md",
    "provider_fields_analysis.md",
    "research_interactive_file_editing_cli_tools.md",
    "test_confirmation.md",
    "test_history_navigation.md",
    "test_theme.toml",
    "DOCUMENTATION_UPDATE_SUMMARY.md",
    "IMPLEMENTATION_ANALYSIS.md",
    "TECHNOLOGY_ASSESSMENT.md",
    "TUI_MODULE_DOCUMENTATION.md",
    "RALPH_DOCUMENTATION.md",
    "docs/assessment_config_main_lib.md",
    "docs/gaps-closing.json",
    "docs/mcp_metadata_storage_design.md",
    "docs/mcp_metadata_storage_implementation.rs",
    "docs/mcp_metadata_storage_summary.md",
    "docs/perpetual_persona_swarms.md",
    "docs/session-message-management-design.md",
    "docs/subtask_*.md",
    "docs/tool_registration_design.md",
    "docs/tui_framework_brief.md",
    "docs/tui_technical_specs.json",
    "docs/agent-swarm-integration-*.md",
    "docs/agent-swarm-integration-*.rs",
    "docs/PROJECT_CONSTRAINTS_ANALYSIS.md",
    "docs/RISK_ASSESSMENT_AND_MITIGATION.md",
    "docs/TECHNICAL_REQUIREMENTS_SUMMARY.md",
    ".codetether-todos.json",
]

[lib]
name = "codetether_agent"
path = "src/lib.rs"

[[bin]]
name = "codetether"
path = "src/main.rs"

[features]
default = []
candle-cuda = ["candle-core/cuda", "candle-transformers/cuda"]
candle-cudnn = ["candle-cuda", "candle-core/cudnn", "candle-transformers/cudnn"]

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# CLI
clap = { version = "4", features = ["derive", "env"] }

# HTTP server/client
axum = { version = "0.8", features = ["ws", "macros"] }
reqwest = { version = "0.13.1", features = ["json", "stream", "rustls"], default-features = false }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "auth"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# AI providers
async-openai = { version = "0.32.4", features = ["chat-completion"] }

# A2A/MCP protocols
jsonrpc-core = "18"

# TUI
ratatui = "0.30.0"
crossterm = "0.29.0"

# Config
config = "0.15"
directories = "6"
toml = "0.9.8"

# Secrets (HashiCorp Vault)
vaultrs = "0.7"

# Utilities
anyhow = "1"
thiserror = "2"
tracing = "0.1"
urlencoding = "2"
rand = "0.9.2"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
async-trait = "0.1"
lazy_static = "1.4"
once_cell = "1.19"
parking_lot = "0.12"
dashmap = "6"
glob = "0.3"
html-escape = "0.2"
ignore = "0.4"
walkdir = "2"
regex = "1"
similar = "2"
lsp-types = "0.97.0"
syntect = { version = "5", default-features = false, features = ["default-syntaxes", "default-themes", "regex-onig"] }
candle-core = "0.9.2"
candle-transformers = "0.9.2"
tokenizers = "0.21.4"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3"
insta = "1"

[profile.release]
lto = true
codegen-units = 1
strip = true

[patch.crates-io]
candle-kernels = { path = "vendor/candle-kernels" }
