[workspace]

[package]
name = "codetether-agent"
version = "3.0.1"
edition = "2024"
authors = ["Riley Seaburg <riley@rileyseaburg.com>"]
description = "A2A-native AI coding agent for the CodeTether ecosystem"
license = "MIT"
repository = "https://github.com/rileyseaburg/codetether-agent"
exclude = [
    "npm/",
    "dist/",
    "target/",
    "vendor/",
    "docs/tui-screenshot.png",
    "prd*.json",
    "ui-prd.json",
    "worktree-prd.json",
    "feature_*.json",
    "benchmark_results.json",
    "subtask*.json",
    "subtask*.md",
    "*.txt",
    "*.py",
    "post.md",
    "gap-inventory.md",
    "content_inventory_document.md",
    "static_analysis_report.md",
    "provider_fields_analysis.md",
    "research_interactive_file_editing_cli_tools.md",
    "test_confirmation.md",
    "test_history_navigation.md",
    "test_theme.toml",
    "DOCUMENTATION_UPDATE_SUMMARY.md",
    "IMPLEMENTATION_ANALYSIS.md",
    "TECHNOLOGY_ASSESSMENT.md",
    "TUI_MODULE_DOCUMENTATION.md",
    "RALPH_DOCUMENTATION.md",
    "docs/assessment_config_main_lib.md",
    "docs/gaps-closing.json",
    "docs/mcp_metadata_storage_design.md",
    "docs/mcp_metadata_storage_implementation.rs",
    "docs/mcp_metadata_storage_summary.md",
    "docs/perpetual_persona_swarms.md",
    "docs/session-message-management-design.md",
    "docs/subtask_*.md",
    "docs/tool_registration_design.md",
    "docs/tui_framework_brief.md",
    "docs/tui_technical_specs.json",
    "docs/agent-swarm-integration-*.md",
    "docs/agent-swarm-integration-*.rs",
    "docs/PROJECT_CONSTRAINTS_ANALYSIS.md",
    "docs/RISK_ASSESSMENT_AND_MITIGATION.md",
    "docs/TECHNICAL_REQUIREMENTS_SUMMARY.md",
    ".codetether-todos.json",
]

[lib]
name = "codetether_agent"
path = "src/lib.rs"

[[bin]]
name = "codetether"
path = "src/main.rs"

[features]
default = ["functiongemma"]
candle-cuda = ["candle-core/cuda", "candle-transformers/cuda"]
candle-cudnn = ["candle-cuda", "candle-core/cudnn", "candle-transformers/cudnn"]
functiongemma = []

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Clipboard support
arboard = "3.4"

# CLI
clap = { version = "4.5.58", features = ["derive", "env"] }

# HTTP server/client
axum = { version = "0.8", features = ["ws", "macros"] }
reqwest = { version = "0.13.2", features = ["json", "stream", "rustls", "multipart"], default-features = false }
http = "1"
minio = "0.3"
rustls = { version = "0.23", default-features = false, features = ["ring"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "auth"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# AI providers
async-openai = { version = "0.32.4", features = ["chat-completion"] }

# A2A/MCP protocols
jsonrpc-core = "18"

# gRPC transport (A2A protocol)
tonic = "0.14.3"
tonic-prost = "0.14.3"
tonic-web = "0.14"
prost = "0.14.3"
prost-types = "0.14.3"
async-stream = "0.3"
tokio-stream = "0.1"

# TUI
ratatui = "0.30.0"
crossterm = { version = "0.29.0", features = ["event-stream"] }

# Config
config = "0.15"
directories = "6"
toml = "0.9.8"
dotenvy = "0.15"

# Secrets (HashiCorp Vault)
vaultrs = "0.7"

# Kubernetes self-deployment
kube = { version = "3.0.1", features = ["runtime", "client", "derive", "config"] }
k8s-openapi = { version = "0.27.0", features = ["latest"] }

# Plugin signing & sandboxing
sha2 = "0.10"
hmac = "0.12"
hex = "0.4"

# Image encoding
base64 = "0.22"

# Utilities
anyhow = "1.0.101"
thiserror = "2"
tracing = "0.1"
urlencoding = "2"
rand = "0.10.0"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
async-trait = "0.1"
lazy_static = "1.4"
once_cell = "1.19"
parking_lot = "0.12"
dashmap = "6"
glob = "0.3"
html-escape = "0.2"
ignore = "0.4"
walkdir = "2"
which = "8.0.0"
regex = "1"
similar = "2"
lsp-types = "0.97.0"
syntect = { version = "5", default-features = false, features = ["default-syntaxes", "default-themes", "regex-fancy"] }
tempfile = "3.25.0"
candle-core = "0.9.2"
candle-transformers = "0.9.2"
tokenizers = "0.22.2"

[target.'cfg(unix)'.dependencies]
libc = "0.2.181"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3"
insta = "1"

[build-dependencies]
tonic-prost-build = "0.14.3"

[profile.release]
lto = "thin"
codegen-units = 1
strip = true

# CI profile: sccache-friendly (no LTO, parallel codegen)
[profile.ci]
inherits = "release"
lto = false
codegen-units = 16

[patch.crates-io]
candle-kernels = { path = "vendor/candle-kernels" }
