[project]
name = "codetether-control-plane"
version = "0.1.0"
description = "Python control plane utilities for Codetether Agent"
requires-python = ">=3.8"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7.0.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
