[package]
name = "codetether-browser"
version = "0.1.0"
edition = "2024"
authors = ["Riley Seaburg <riley@rileyseaburg.com>"]
description = "Browser automation runtime for CodeTether"
license = "MIT"

[features]
default = []
tetherscript = ["dep:tetherscript"]

[dependencies]
anyhow = "1"
base64 = "0.22"
chromiumoxide = "0.9.1"
futures = "0.3"
once_cell = "1.19"
parking_lot = "0.12"
rand = "0.10.0"
reqwest = { version = "0.13.2", features = ["json", "rustls", "blocking"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tetherscript = { version = "0.1.0-alpha.12", optional = true }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
which = "8.0.0"
